--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -29,7 +29,9 @@ pages:
       oops: Oops! Something went wrong while submitting the form
   jobs:
     title: Emplois
-    texte: "Merci pour l’intérêt que vous portez aux Jeux Olympiques de la jeunesse Lausanne 2020. \nNotre Comité d’Organisation n’a actuellement pas de postes à pourvoir. \nSi vous souhaitez soutenir Lausanne 2020 en tant que bénévole c’est par ici"
+    texte: |
+            Merci pour l’intérêt que vous portez aux Jeux Olympiques de la Jeunesse Lausanne 2020. Aucun poste n’est actuellement à pourvoir au sein du comité d’organisation.
+            Si vous souhaitez soutenir Lausanne 2020 en tant que bénévole, cliquez <a href="http://volunteers.lausanne2020.com/" class="link_site" target="_blank">ici</a>. 
   about:
     title1: |
             Les Jeux Olympiques de la Jeunesse : 
