Change bg color for newsletter on home page

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -21,7 +21,7 @@ pages:
       title: Alle Lausanne 2020 Goodies demnächst verfügbar!
       button: Los geht’s
     newsletter:
-      part1: Sei Teil des Abenteuers <span class="l2020">Lausanne 2020</span> und erhalte die aktuellsten News!
+      part1: Sei Teil des Abenteuers Lausanne 2020 und erhalte die aktuellsten News!
       part2: Lausanne2020!
       button: Los geht’s
       placeholder: Emailadresse
