--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -21,7 +21,7 @@ pages:
       title: All the Lausanne 2020 goodies available soon!
       button: Shop!
     newsletter:
-      part1: Be part of the <span class="l2020">Lausanne 2020</span> adventure and receive the latest news!
+      part1: Be part of the Lausanne 2020 adventure and receive the latest news!
       part2: Lausanne2020!
       button: Let’s go
       thanks: Thank you! Your submission has been received!
