--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -21,7 +21,7 @@ pages:
       title: Tous les produits Lausanne 2020 bientôt disponibles!
       button: Shop!
     newsletter:
-      part1: Faites partie de l’aventure <span class="l2020">Lausanne 2020</span> et recevez les dernières nouvelles !
+      part1: Faites partie de l’aventure Lausanne 2020 et recevez les dernières nouvelles !
       part2: Lausanne2020!
       button: Je m’inscris
       placeholder: Adresse email
