--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -107,19 +107,19 @@ pages:
       title: Lausanne 2020 in numbers
       fact1: 
         number: 1’200 
-        text: athletes between 15 ans 18 years
+        text: Athletes between 15 ans 18 years
       fact2: 
         number: "70" 
-        text: nations
+        text: Nations
       fact3: 
         number: 3rd 
         text: Winter Youth Olympic Games
       fact4: 
         number: "10" 
-        text: days of competition and festivals
+        text: Days of competition and festivals
       fact5: 
         number: 3’000 
-        text: volunteers
+        text: Volunteers
   contact:
     title: Contact
     form:
