Remove volunteers links

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -30,8 +30,8 @@ pages:
   jobs:
     title: Emplois
     texte: |
-            Vielen Dank für dein Interesse an den Olympischen Jugendspielen Lausanne 2020. Unser Organisationskomitee hat momentan keine offenen Stellen zu besetzen. 
-                  Wenn du Lausanne 2020 als Volunteer unterstützen möchtest, dann klicke <a href="http://volunteers.lausanne2020.com/" class="link_site" target="_blank">hier.</a>
+            Vielen Dank für dein Interesse an den Olympischen Jugendspielen Lausanne 2020. 
+            Unser Organisationskomitee hat momentan keine offenen Stellen zu besetzen. 
   about:
     title1: |
             Die Olympischen Jugendspiele:
