--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -31,7 +31,7 @@ pages:
     title: Emplois
     texte: |
             Thank you for your interest in the Lausanne 2020 Youth Olympic Games.
-            No position has been opened in the Organizing committee at the time being. If you wish to volunteer, click <a href="http://volunteers.lausanne2020.com/" class="link_site" target="_blank">here</a>.
+            No position has been opened in the Organizing committee at the time being.
   about:
     title1: |
             The Youth Olympic Games:
