--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -30,8 +30,8 @@ pages:
   jobs:
     title: Emplois
     texte: |
-            Merci pour l’intérêt que vous portez aux Jeux Olympiques de la Jeunesse Lausanne 2020. Aucun poste n’est actuellement à pourvoir au sein du comité d’organisation.
-            Si vous souhaitez soutenir Lausanne 2020 en tant que bénévole, cliquez <a href="http://volunteers.lausanne2020.com/" class="link_site" target="_blank">ici</a>. 
+            Merci pour l’intérêt que vous portez aux Jeux Olympiques de la Jeunesse Lausanne 2020. 
+            Aucun poste n’est actuellement à pourvoir au sein du comité d’organisation.
   about:
     title1: |
             Les Jeux Olympiques de la Jeunesse : 
