--- a/_data/nav-footer/de.yml
+++ b/_data/nav-footer/de.yml
@@ -4,6 +4,8 @@
   path: "/de/about"
 - title: "Wettkampfstätten"
   path: "/de/venues"
+- title: "News"
+  path: "/de/news"
 - title: "Jobs"
   path: "/de/jobs"
 - title: "Kontakt"
