--- a/_data/nav-footer/fr.yml
+++ b/_data/nav-footer/fr.yml
@@ -4,6 +4,8 @@
   path: "/fr/about"
 - title: "Les sites"
   path: "/fr/venues"
+- title: "News"
+  path: "/fr/news"
 - title: "Emplois"
   path: "/fr/jobs"
 - title: "Contact"
