--- a/_data/nav-footer/en.yml
+++ b/_data/nav-footer/en.yml
@@ -4,6 +4,8 @@
   path: "/about"
 - title: "Venues"
   path: "/venues"
+- title: "News"
+  path: "/news"
 - title: "Jobs"
   path: "/jobs"
 - title: "Contact"
