Improve news template

--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -13,6 +13,7 @@ pages:
       part2: Culture, Sport, Education 
     news:
       title: News
+      plus: Lire la suite
     about:
       title: A propos
       texte: Les Jeux Olympiques de la Jeunesse sont un événement sportif Olympique international du plus haut niveau pour les athlètes âgés de 15 à 18 ans. Ils associent la performance sportive, la culture et l'éducation dans un réel festival du sport.
