--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -13,6 +13,7 @@ pages:
       part2: Kultur, Sport, Bildung
     news:
       title: News
+      plus: weiterlesen
     about:
       title: Über
       texte: Die Olympischen Jugendspiele sind ein internationaler Olympischer Spitzensportanlass für Athleten im Alter von 15 bis 18 Jahren. Sie verbinden die sportliche Höchstleistung, die Kultur, sowie die Bildung in einem wahrhaften Sportfestival.
