--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -28,6 +28,8 @@ pages:
       placeholder: Emailadresse
       thanks: Vielen Dank für deine Anmeldung!
       oops: Oops! Something went wrong while submitting the form
+  news:
+    archive_link: Archiv
   jobs:
     title: Jobs
     texte: |
