Add other preview content from Contentful

--- a/_config.yml
+++ b/_config.yml
@@ -45,3 +45,25 @@ contentful:
           api_url: 'preview.contentful.com' # Defaults to 'api.contentful.com' which is Production
         cda_query:
           content_type: keyNumbers
+    - news: # Jekyll _data folder identifier - Required
+        space: ENV_CONTENTFUL_SPACE_ID # Required
+        access_token: ENV_CONTENTFUL_ACCESS_TOKEN_PREVIEW # Required
+        cda_query:
+          content_type: news
+          order: -fields.date
+          limit: 3
+    - venues: # Jekyll _data folder identifier - Required
+        space: ENV_CONTENTFUL_SPACE_ID # Required
+        access_token: ENV_CONTENTFUL_ACCESS_TOKEN_PREVIEW # Required
+        cda_query:
+          content_type: venues
+    - sectionSites: # Jekyll _data folder identifier - Required
+        space: ENV_CONTENTFUL_SPACE_ID # Required
+        access_token: ENV_CONTENTFUL_ACCESS_TOKEN_PREVIEW # Required
+        cda_query:
+          content_type: sectionSites
+    - partnersLogos: # Jekyll _data folder identifier - Required
+        space: ENV_CONTENTFUL_SPACE_ID # Required
+        access_token: ENV_CONTENTFUL_ACCESS_TOKEN_PREVIEW # Required
+        cda_query:
+          content_type: partnersLogos
