--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ exclude:
   - Gemfile.lock
 sass:
   sass_dir: _sass
+  style: compressed
 
 languages: ["en","fr","de"]
 exclude_from_localizations: ["js","css","_sass"]
