--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -36,9 +36,7 @@ pages:
             Vielen Dank für dein Interesse an den Olympischen Jugendspielen Lausanne 2020. 
             Unser Organisationskomitee hat momentan keine offenen Stellen zu besetzen. 
   about:
-    title1: |
-            Die Olympischen Jugendspiele:
-            wetteifern, lernen und teilen!
+    title1: "Die Olympischen Jugendspiele : wetteifern, lernen und teilen!"
     texte1: |
             Die Olympischen Jugendspiele sind ein internationaler olympischer Spitzensportanlass für Athletinnen und Athleten im Alter von 15 bis 18 Jahren.
 
