Add blank space in about title1

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -36,9 +36,7 @@ pages:
             Thank you for your interest in the Lausanne 2020 Youth Olympic Games.
             No position has been opened in the Organizing committee at the time being.
   about:
-    title1: |
-            The Youth Olympic Games:
-            Compete, learn and share!
+    title1: "The Youth Olympic Games : Compete, learn and share!"
     texte1: |
             The Youth Olympic Games are an international Olympic sporting event of the highest level for athletes aged 15 to 18 years old.
             
