--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -33,10 +33,16 @@ pages:
   jobs:
     title: Jobs
     texte: |
-            Vielen Dank für dein Interesse an den Olympischen Jugendspielen Lausanne 2020. 
-            Unser Organisationskomitee hat momentan keine offenen Stellen zu besetzen. 
+            Vielen Dank für dein Interesse an den Olympischen Jugendspielen Lausanne 2020.
+    texteEmpty: |
+            Vielen Dank für dein Interesse an den Olympischen Jugendspielen Lausanne 2020.
+            Unser Organisationskomitee hat momentan keine offenen Stellen zu besetzen.
+    from: Ab
+    readFile: Mehr infos
   about:
-    title1: "Die Olympischen Jugendspiele : wetteifern, lernen und teilen!"
+    title1: |
+            Die Olympischen Jugendspiele:
+            wetteifern, lernen und teilen!
     texte1: |
             Die Olympischen Jugendspiele sind ein internationaler olympischer Spitzensportanlass für Athletinnen und Athleten im Alter von 15 bis 18 Jahren.
 
