--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -41,8 +41,7 @@ pages:
     readFile: En savoir plus
   about:
     title1: |
-            Les Jeux Olympiques de la Jeunesse : 
-            Concourir, apprendre et partager !
+            Les Jeux Olympiques de la Jeunesse : Concourir, apprendre et partager !
     texte1: |
             Les Jeux Olympiques de la Jeunesse sont un événement sportif Olympique international du plus haut niveau pour les athlètes âgés de 15 à 18 ans.
             
