Quoted about title

--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -41,7 +41,7 @@ pages:
     readFile: En savoir plus
   about:
     title1: |
-            Les Jeux Olympiques de la Jeunesse : Concourir, apprendre et partager !
+            "Les Jeux Olympiques de la Jeunesse : Concourir, apprendre et partager !"
     texte1: |
             Les Jeux Olympiques de la Jeunesse sont un événement sportif Olympique international du plus haut niveau pour les athlètes âgés de 15 à 18 ans.
             
@@ -52,7 +52,7 @@ pages:
     texte2: |
             En puisant dans l’héritage et les atouts de la Suisse, vivre les valeurs du mouvement Olympique que sont l’amitié, l’excellence et le respect au travers de la formation, la culture, l’innovation et le sport en organisant des Jeux Olympiques de la Jeunesse, uniques et rassembleurs, au service de la promotion d’un monde meilleur.
 
-            Dans cet esprit, Lausanne 2020 s’est donné pour mission de :
+            "Dans cet esprit, Lausanne 2020 s’est donné pour mission de :"
             - <b>Délivrer</b> des Jeux Olympiques de la Jeunesse novateurs en les co-construisant avec le CIO.
             - <b>Créer</b> l’opportunité pour l’ensemble des parties prenantes de <b>s’approprier</b> les Jeux Olympiques de la Jeunesse en leur permettant de <b>s’engager activement</b> pour la réalisation de leurs propres objectifs.
             - <b>Valoriser</b> les aspects culturels et éducatifs du sport en donnant une visibilité forte à toutes les facettes du concept des Jeux Olympique de la Jeunesse.
