--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -40,8 +40,7 @@ pages:
     from: A partir du
     readFile: En savoir plus
   about:
-    title1: |
-            "Les Jeux Olympiques de la Jeunesse : Concourir, apprendre et partager !"
+    title1: "Les Jeux Olympiques de la Jeunesse : Concourir, apprendre et partager !"
     texte1: |
             Les Jeux Olympiques de la Jeunesse sont un événement sportif Olympique international du plus haut niveau pour les athlètes âgés de 15 à 18 ans.
             
