--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -40,9 +40,7 @@ pages:
     from: From the
     readFile: read more
   about:
-    title1: |
-            The Youth Olympic Games:
-            Compete, learn and share!
+    title1: "The Youth Olympic Games : Compete, learn and share!"
     texte1: |
             The Youth Olympic Games are an international Olympic sporting event of the highest level for athletes aged 15 to 18 years old.
             
