--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -40,9 +40,7 @@ pages:
     from: Ab
     readFile: Mehr infos
   about:
-    title1: |
-            Die Olympischen Jugendspiele:
-            wetteifern, lernen und teilen!
+    title1: "Die Olympischen Jugendspiele : wetteifern, lernen und teilen!"
     texte1: |
             Die Olympischen Jugendspiele sind ein internationaler olympischer Spitzensportanlass für Athletinnen und Athleten im Alter von 15 bis 18 Jahren.
 
