--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -111,7 +111,7 @@ pages:
     facts:
       title: Lausanne 2020 en chiffres
       fact1: 
-        number: "1880" 
+        number: "1’880" 
         text: Athlètes entre 15 et 18 ans
       fact2: 
         number: "70" 
