4th title added

--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -10,7 +10,10 @@ pages:
       part2: Héritage, Expertise, Innovation
     title3:
       part1: Lausanne 2020
-      part2: Culture, Sport, Education 
+      part2: Culture, Sport, Education
+    title4:
+      part1: Lausanne 2020
+      part2: Rendez-vous en Janvier 2020
     news:
       title: News
       plus: Lire la suite
