4th title added

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -11,6 +11,9 @@ pages:
     title3:
       part1: Lausanne 2020
       part2: Culture, Sport, Education
+    title4:
+      part1: Lausanne 2020
+      part2: See you in January 2020
     news:
       title: News
       plus: read more
