4th title added

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -11,6 +11,9 @@ pages:
     title3:
       part1: Lausanne 2020
       part2: Kultur, Sport, Bildung
+    title4:
+      part1: Lausanne 2020
+      part2: Wir sehen uns im Januar 2020
     news:
       title: News
       plus: weiterlesen
