Added more news text

--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -17,6 +17,7 @@ pages:
     news:
       title: News
       plus: Lire la suite
+      autres: Afficher plus de news
     about:
       title: A propos
       texte: Les Jeux Olympiques de la Jeunesse sont un événement sportif Olympique international du plus haut niveau pour les athlètes âgés de 15 à 18 ans. Ils associent la performance sportive, la culture et l'éducation dans un réel festival du sport.
