Added more news title

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -17,6 +17,7 @@ pages:
     news:
       title: News
       plus: read more
+      autres: See all other news
     about:
       title: About
       texte: The Youth Olympic Games are an international Olympic sporting event of the highest level for athletes aged 15 to 18 years old. They combine sport performance, culture and education in an authentic celebration of sport with a festive atmosphere.
