Added more news title

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -17,6 +17,7 @@ pages:
     news:
       title: News
       plus: weiterlesen
+      autres: Alle news zeigen
     about:
       title: Über
       texte: Die Olympischen Jugendspiele sind ein internationaler Olympischer Spitzensportanlass für Athleten im Alter von 15 bis 18 Jahren. Sie verbinden die sportliche Höchstleistung, die Kultur, sowie die Bildung in einem wahrhaften Sportfestival.
