Social Media Feed title added

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -25,6 +25,8 @@ pages:
     shop:
       title: Alle Lausanne 2020 Fan-Artikel demnächst verfügbar!
       button: Los geht’s
+    socialwall:
+      title: Social Media Feed
     newsletter:
       part1: Sei Teil des Abenteuers Lausanne 2020 und erhalte die aktuellsten News!
       part2: Lausanne2020!
