About text updated

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -20,7 +20,7 @@ pages:
       autres: See all other news
     about:
       title: About
-      texte: The Youth Olympic Games are an international Olympic sporting event of the highest level for athletes aged 15 to 18 years old. They combine sport performance, culture and education in an authentic celebration of sport with a festive atmosphere.
+      texte: From January 10th to the 22nd 2020, Lausanne welcomes the third edition of the Winter Youth Olympic Games. 28 years after obtaining the title of Olympic Capital, Lausanne will become an Olympic city by hosting the second largest multisport winter event after the Winter Olympics. This event will offer a unique and unforgettable Olympic experience to young athletes. The combination of culture, performance and education will give birth to a genuine celebration of sports!
       more: More
     shop:
       title: All the Lausanne 2020 goodies available soon!
