Added learn more link

--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -53,6 +53,7 @@ pages:
             Ils associent la performance sportive, la culture et l'éducation dans un réel festival du sport. Ils ont comme objectif d’encourager la jeunesse à adopter et vivre selon les valeurs positives du sport – le respect de l’autre, de soi, de notre environnement, l’amitié entre les peuples et les cultures, l’excellence dans le don de soi – et à en devenir les ambassadeurs à travers le monde.
             
             Par leur vocation, les Jeux Olympiques de la Jeunesse veulent être un incubateur d’innovation pour les événements sportifs du futur.
+    more: En apprendre plus !
     title2: La vision de Lausanne 2020
     texte2: |
             En puisant dans l’héritage et les atouts de la Suisse, vivre les valeurs du mouvement Olympique que sont l’amitié, l’excellence et le respect au travers de la formation, la culture, l’innovation et le sport en organisant des Jeux Olympiques de la Jeunesse, uniques et rassembleurs, au service de la promotion d’un monde meilleur.
