Added learn more link

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -53,6 +53,7 @@ pages:
             Sie verbinden sportliche Höchstleistungen mit Kultur und Bildung zu einem einzigartigen Sportfest und haben zum Ziel, die Jugend zu ermutigen, die positiven Werte des Sports anzunehmen und zu leben. Dies sind der Respekt gegenüber anderen, sich selbst und unserer Umwelt, die Freundschaft zwischen Völkern und Kulturen und sportliche Höchstleistung. Weiter sollen die Jugendlichen Sportbotschafter in der ganzen Welt werden.
             
             Die Olympischen Jugendspiele wollen ein führendes Beispiel der Innovation für die Sportanlässe der Zukunft zu sein. 
+    more: Learn more !
     title2: Die Vision von Lausanne 2020
     texte2: |
             Indem das Erbe und die Stärken der Schweiz ausgeschöpft werden, sollen die Werte der Olympischen Bewegung (Höchstleistung, Respekt und Freundschaft) durch die Bildung, die Kultur, die Innovation und den Sport gelebt werden, indem einzigartige und vereinende Olympische Jugendspiele organisiert werden, welche zu einer besseren Welt beitragen.
