--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -53,6 +53,7 @@ pages:
             They combine sport performance, culture and education in an authentic celebration of sport with a festive atmosphere. The aim is to encourage youth to adopt and represent the positive values of sport - respect for others, for themselves and for our environment, friendship between people and cultures, excellence in self-giving, and to become sport ambassadors throughout the world.
             
             Through its mission, the Youth Olympic Games aspire to be a leading example of innovation for sporting events of the future.
+    more: Learn more !
     title2: The vision of Lausanne 2020
     texte2: |
             To draw upon the legacy and strengths of Switzerland and live the Olympic values of friendship, excellence and respect through education, culture, innovation and sport, while organizing Youth Olympic Games that are unique and unifying in promoting a better world.
