--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -54,16 +54,11 @@ pages:
             
             Par leur vocation, les Jeux Olympiques de la Jeunesse veulent être un incubateur d’innovation pour les événements sportifs du futur.
     more: En apprendre plus !
-    title2: La vision de Lausanne 2020
+    title2: L'ambition de Lausanne 2020
     texte2: |
-            En puisant dans l’héritage et les atouts de la Suisse, vivre les valeurs du mouvement Olympique que sont l’amitié, l’excellence et le respect au travers de la formation, la culture, l’innovation et le sport en organisant des Jeux Olympiques de la Jeunesse, uniques et rassembleurs, au service de la promotion d’un monde meilleur.
-
-            Dans cet esprit, Lausanne 2020 s’est donné pour mission de :
-            - <b>Délivrer</b> des Jeux Olympiques de la Jeunesse novateurs en les co-construisant avec le CIO.
-            - <b>Créer</b> l’opportunité pour l’ensemble des parties prenantes de <b>s’approprier</b> les Jeux Olympiques de la Jeunesse en leur permettant de <b>s’engager activement</b> pour la réalisation de leurs propres objectifs.
-            - <b>Valoriser</b> les aspects culturels et éducatifs du sport en donnant une visibilité forte à toutes les facettes du concept des Jeux Olympique de la Jeunesse.
-            - <b>Fédérer et faire participer</b> toute la région, l’ensemble du pays ainsi que la France voisine autour d’un événement rassembleur et diffuseur d’énergie positive.
-            - <b>Promouvoir</b> la paix entre les peuples en créant un environnement propice au « vivre ensemble ».
+            Lausanne 2020, c’est l’ambition de créer un plateforme sportive nouvelle pour la jeunesse en l’impliquant activement dans la préparation et l’organisation de l’événement.
+            Il s’agit d’engager toute la population locale, régionale et même nationale autour d’un événement unique et fédérateur en faveur d’un monde meilleur.
+            Valoriser et responsabiliser la jeunesse en lui permettant de devenir une ambassadrice des valeurs positives du sport, d’acquérir de nouveaux talents et de s’accomplir en devenant les leaders de demain. Ceci en faisant des Jeux Olympiques de la Jeunesse un laboratoire d’innovation; incubateur d’idées pour la jeunesse et en puisant dans l’héritage et les atouts uniques de la Suisse en termes de formation, de culture et d’innovation.
 
             <span class="important-dates">Lausanne 2020 se déroulera du 10 au 22 janvier 2020 !</span>
     sports_title: Les sports
