Updated about text&title 2

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -54,16 +54,11 @@ pages:
             
             Die Olympischen Jugendspiele wollen ein führendes Beispiel der Innovation für die Sportanlässe der Zukunft zu sein. 
     more: Mehr Infos !
-    title2: Die Vision von Lausanne 2020
+    title2: Die Ambition von Lausanne 2020
     texte2: |
-            Indem das Erbe und die Stärken der Schweiz ausgeschöpft werden, sollen die Werte der Olympischen Bewegung (Höchstleistung, Respekt und Freundschaft) durch die Bildung, die Kultur, die Innovation und den Sport gelebt werden, indem einzigartige und vereinende Olympische Jugendspiele organisiert werden, welche zu einer besseren Welt beitragen.
-
-            In diesem Sinne verfolgt Lausanne 2020 folgende Ziele:
-            - <b>Organisieren</b> von innovativen Olympischen Jugendspielen in enger Zusammenarbeit mit dem IOC.
-            - <b>Schaffen</b> von Gelegenheiten für alle Stakeholders, sich die Olympischen Jugendspiele <b>anzueignen</b> und sich <b>aktiv</b> für die Realisierung ihrer eigenen Ziele <b>einzusetzen</b>.
-            - <b>Stärken</b> der kulturellen und pädagogischen Aspekte des Sports, indem allen Facetten des Konzepts der Olympischen Jugendspiele grosse Aufmerksamkeit geschenkt wird.
-            - <b>Involvieren und Vereinen</b> der ganzen Region, des ganzen Landes und des benachbarten Frankreichs, um einen verbindenden Event zu gestalten, der positive Energie verbreitet.
-            - <b>Fördern</b> von Frieden zwischen Völkern, indem eine gesunde Umgebung für das Zusammenleben kreiert wird.
+            Lausanne 2020 ist die Ambition, eine neue Sportplattform für die Jugend zu schaffen, die diese aktiv in die Vorbereitung und Organisation des Events miteinbezieht.
+            Es geht darum, die gesamte lokale, regionale und nationale Bevölkerung zu Gunsten einer besseren Welt für ein einzigartiges und zusammenführendes Event miteinzubeziehen.
+            Wir wollen die Jugendlichen wertschätzen und ihnen Verantwortung übergeben, indem sie zu Botschaftern der positiven Werte des Sports werden, neue Talente in sich entdecken und sich als zukünftige Leader entwickeln können. Die Olympischen Jugendspiele werden zum Innovationslabor und zum Brutkasten neuer Ideen für die Jugend, indem auf das Erbe und die einzigartigen Stärken der Schweiz in den Bereichen Bildung, Kultur und Innovation zurückgegriffen wird.
 
             <span class="important-dates">Lausanne 2020 findet vom 10. bis 22. Januar 2020 statt.</span>
     sports_title: Die Sportarten
