--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -54,16 +54,11 @@ pages:
             
             Through its mission, the Youth Olympic Games aspire to be a leading example of innovation for sporting events of the future.
     more: Learn more !
-    title2: The vision of Lausanne 2020
+    title2: The ambition of Lausanne 2020
     texte2: |
-            To draw upon the legacy and strengths of Switzerland and live the Olympic values of friendship, excellence and respect through education, culture, innovation and sport, while organizing Youth Olympic Games that are unique and unifying in promoting a better world.
-
-            In this spirit Lausanne 2020 set the following mission:
-            - <b>Deliver</b> an innovative Youth Olympic Games in full co-construction with the IOC.
-            - <b>Create</b> an opportunity for all stakeholders to take <b>ownership</b> of the Youth Olympic Games, allowing them to <b>actively engage</b> in achieving their own goals.
-            - <b>Enhance</b> the cultural and educational aspects of sport by providing high visibility to all facets of the concept of the Youth Olympic Games.
-            - <b>Unite and involve</b> the whole region, the country of Switzerland, as well as neighboring France, to create a unifying event that spreads positivity.
-            - <b>Promote</b> values of peace between people by creating an environment conducive to “living together”.
+            Lausanne 2020 is the ambition of creating a new sports platform for youth by actively involving them in the event’s preparation and organization.
+            It’s a question of implicating the local, regional and even national populations around a unique and federative happening, that aims for a better world.
+            Valorize and give responsibility to youth by providing them an opportunity to become ambassadors of positive sports’ values, to acquire new talents and to reach self-accomplishment by becoming the tomorrow’s leaders. All this while making the Youth Olympic Games a creative laboratory; incubator of ideas of youth, for youth, while drawing inspiration from Switzerland’s heritage and unique assets in education, culture and innovation.
 
             <span class="important-dates">Lausanne 2020 will take place from January 10th to 22nd , 2020.</span>
     sports_title: Sports
